yadifa (2.2.2-2) unstable; urgency=medium

  * Avoid compiling with O3 on ppc64el due to a known gcc bug (#845751)

 -- Breno Leitao <breno.leitao@gmail.com>  Mon, 28 Nov 2016 15:12:29 -0500

yadifa (2.2.2-1) unstable; urgency=medium

  * New upstream version 2.2.2 (Closes: #828612)
  * Refreshed no-compiledate patches
  * Update spelling fix patches

 -- Markus Schade <markus.schade@gmail.com>  Tue, 08 Nov 2016 12:21:48 +0100

yadifa (2.2.1-1) unstable; urgency=low

  * New upstream version 2.2.1
  * yadifad.conf
      rename keyword in acl to controller
      add example for dnssec policy
  * use /run instead of /var/run
  * Refreshed no-compiledate patches
  * Bump Standards-Version to 3.9.8

 -- Markus Schade <markus.schade@gmail.com>  Mon, 25 Jul 2016 10:11:58 +0200

yadifa (2.1.6-1) unstable; urgency=low

  * New upstream version 2.1.6
  * Changed Vcs-Git URI to https
  * Refreshed no-compiledate patches
  * Re-add patch fixing spelling errors
  * Add CPPFLAGS to properly produce dbgsym package
  * Re-order/fix configure options (tools) and enable dynamic provisioning
  * Declare compliance with Debian policy 3.9.7

 -- Markus Schade <markus.schade@gmail.com>  Fri, 19 Feb 2016 12:45:30 +0100

yadifa (2.1.4-2) unstable; urgency=low

  * Extend no-compile-date patch to make the build reproducible again.
    Courtesy of Reiner Herrmann. (Closes: #803139)

 -- Markus Schade <markus.schade@gmail.com>  Tue, 27 Oct 2015 11:39:00 +0100

yadifa (2.1.4-1) unstable; urgency=low

  * New upstream version 2.1.4

 -- Markus Schade <markus.schade@gmail.com>  Mon, 26 Oct 2015 15:00:10 +0100

yadifa (2.1.3-2) unstable; urgency=low

  * Add debian/patches/do-not-use-or-define-the-compile-date.patch
    to make the build reproducible. Courtesy of Santiago Vila
    (Closes: #798450)

 -- Markus Schade <markus.schade@gmail.com>  Wed, 09 Sep 2015 15:12:24 +0200

yadifa (2.1.3-1) unstable; urgency=low

  * New upstream version 2.1.3
  * Refresh patches for version 2.1.3