@@ -1,3 +1,14 @@
+From:  Breno Leitao <breno.leitao@gmail.com>
+Date: Mon, 28 Nov 2016 15:12:29 -0500
+Subject: Avoid compiling with O3 on ppc64el due to a known bug
+
+Due to GCC bug yadifa cannot be compiled with O3 on ppcel.
+This only fixed in GCC7 and won't be backported.
+
+References:
+ https://gcc.gnu.org/bugzilla/show_bug.cgi?id=71873
+ https://gcc.gnu.org/bugzilla/show_bug.cgi?id=78543
+
 --- a/m4/eurid.m4	2016-11-08 05:56:43.140600104 -0500
 +++ b/m4/eurid.m4	2016-11-28 15:27:26.095324622 -0500
 @@ -298,6 +298,9 @@ case "$(uname -m)" in
