@@ -1,8 +1,9 @@
 yadifa (2.2.2-2) unstable; urgency=medium
 
-  * Avoid compiling with O3 on ppc64el due to a known gcc bug (#845751)
+  * Fix FTBFS on ppc64el due to a known gcc bug (#845751).
+    Courtesy of Breno Leitao
 
- -- Breno Leitao <breno.leitao@gmail.com>  Mon, 28 Nov 2016 15:12:29 -0500
+ -- Markus Schade <markus.schade@gmail.com>  Mon, 28 Nov 2016 21:58:21 +0100
 
 yadifa (2.2.2-1) unstable; urgency=medium
 
